--- a/Albums.html
+++ b/Albums.html
@@ -51,6 +51,8 @@
 	    <button><a href="Artists.html">Artists</a></button>
 	    
 	    <button><a href="Tracks.html">Tracks</a></button>
+	    
+	    <button><a href="Add Your Own.html">Add Your Own</a></button>
 
     </div>
 
