--- a/Tracks.html
+++ b/Tracks.html
@@ -51,6 +51,8 @@
 		<button><a href="Artists.html">Artists</a></button>
 		
 		<button><a href="Albums.html">Albums</a></button>
+		
+		<button><a href="Add Your Own.html">Add Your Own</a></button>
 
 	</div>
 
