--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
 		<button><a href="Albums.html">Albums</a></button>
 		
 		<button><a href="Tracks.html">Tracks</a></button>
+		
+		<button><a href="Add Your Own.html">Add Your Own</a></button>
 
 	</div>
 
