Update Add Your Own.html

--- a/Add Your Own.html
+++ b/Add Your Own.html
@@ -3,7 +3,7 @@
 <html lang="en-US" dir="ltr">
 
 <head>
-
+	
 	<meta charset="utf-8" />
 	<title>Add Your Own</title>
 	<link rel="icon" type="image/png" href="PWA Logo(32x32).png">
@@ -22,7 +22,7 @@
 </head>
 
 <body>
-
+	
 	<!-- This section is for the top section of the webpage which will be common in all of the webpages! -->
 
 	<img src="PWA Logo.png">
@@ -45,15 +45,24 @@
 	<!-- This section is for the links for diferent webpage from the homepage! -->
 
 	<div class="pagelinks">
-
-    <button><a href="index.html">Home</a></button>
-    
-    <button><a href="Artists.html">Artists</a></button>
+		
+		<button><a href="index.html">Home</a></button>
+		
+		<button><a href="Artists.html">Artists</a></button>
 		
 		<button><a href="Albums.html">Albums</a></button>
 		
 		<button><a href="Tracks.html">Tracks</a></button>
 
+	</div>
+
+	<div class="ARTISTSADDTEMPELETE">
+	</div>
+	
+	<div class="ALBUMSSADDTEMPELETE">
+	</div>
+	
+	<div class="TRACKSADDTEMPELETE">
 	</div>
 
 </body>
