--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
 		
 		// Initialize Firebase
 		const app = initializeApp(firebaseConfig);
+		const db = firebase.firestore();
 		const analytics = getAnalytics(app);
 	</script>
 
