--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 		const analytics = getAnalytics(app);
 	</script>
 
-	<script src="/db.js"></script>
+	<script src="/Dosanjh-Beats/db.js"></script>
 
 </body>
 
