--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
 		// Initialize Firebase
 		const app = initializeApp(firebaseConfig);
 		const analytics = getAnalytics(app);
+		const db = firebase.firestore();
 	</script>
 
 	<script src="/Dosanjh-Beats/db.js"></script>
