--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 		const db = firebase.firestore();
 	</script>
 
-	<script src="/Dosanjh-Beats/db.js"></script>
+	<script src="Dosanjh-Beats/db.js"></script>
 
 </body>
 
