--- a/index.html
+++ b/index.html
@@ -65,12 +65,13 @@
 	<p>Founded by MT, I created Dosanjh Beats to celebrate the universal power of music and to provide a platform where fans and artists can connect through their shared love for creativity. The platform allows users to explore, showcase, and contribute to a growing catalog of artists, albums, and tracks.</p>
 
 	<script type="module">
+		
 		// Import the functions you need from the SDKs you need
 		import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.2/firebase-app.js";
-		import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.2/firebase-firestore.js";
 		import { getAnalytics } from "https://www.gstatic.com/firebasejs/11.0.2/firebase-analytics.js";
-		// TODO: Add SDKs for Firebase products that you want to use
-		// https://firebase.google.com/docs/web/setup#available-libraries
+		
+		<script src="https://www.gstatic.com/firebasejs/11.0.2/firebase-app-compat.js"></script>
+		<script src="https://www.gstatic.com/firebasejs/11.0.2/firebase-firestore-compat.js"></script>
 		
 		// Your web app's Firebase configuration
 		// For Firebase JS SDK v7.20.0 and later, measurementId is optional
