--- a/index.html
+++ b/index.html
@@ -68,10 +68,7 @@
 		
 		// Import the functions you need from the SDKs you need
 		import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.2/firebase-app.js";
-		import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.2/firebase-firestore.js";
 		import { getAnalytics } from "https://www.gstatic.com/firebasejs/11.0.2/firebase-analytics.js";
-		// TODO: Add SDKs for Firebase products that you want to use
-		// https://firebase.google.com/docs/web/setup#available-libraries
 		
 		// Your web app's Firebase configuration
 		// For Firebase JS SDK v7.20.0 and later, measurementId is optional
@@ -89,10 +86,10 @@
 		const app = initializeApp(firebaseConfig);
 		const analytics = getAnalytics(app);
 		const db = firebase.firestore();
+
+		<script src="/Dosanjh-Beats/db.js"></script>
 	
 	</script>
-	
-	<script src="Dosanjh-Beats/db.js"></script>
 
 </body>
 
