--- a/index.html
+++ b/index.html
@@ -69,8 +69,6 @@
 		// Import the functions you need from the SDKs you need
 		import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.2/firebase-app.js";
 		import { getAnalytics } from "https://www.gstatic.com/firebasejs/11.0.2/firebase-analytics.js";
-
-		const firebase = https://www.gstatic.com/firebasejs/11.0.2/firebase-app.js
 		
 		// Your web app's Firebase configuration
 		// For Firebase JS SDK v7.20.0 and later, measurementId is optional
@@ -87,7 +85,7 @@
 		// Initialize Firebase
 		const app = initializeApp(firebaseConfig);
 		const analytics = getAnalytics(app);
-		const db = firebase.firestore();
+		const db = getFirestore(app);
 	
 	</script>
 
