--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 		
 		// Initialize Firebase
 		const app = initializeApp(firebaseConfig);
-		const window.db = getFirestore(app);
+		window.db = getFirestore(app);
 		
 	</script>
 
