--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 		
 	</script>
 
-	<script src="/Dosanjh-Beats/db.js"></script>
+	<script type="module" src="/Dosanjh-Beats/db.js"></script>
 
 </body>
 
