--- a/index.html
+++ b/index.html
@@ -66,12 +66,9 @@
 
 	<script type="module">
 		
-		// Import the functions you need from the SDKs you need
 		import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-app.js";
 		import { getFirestore } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-firestore.js";
 		
-		// Your web app's Firebase configuration
-		// For Firebase JS SDK v7.20.0 and later, measurementId is optional
 		const firebaseConfig = {
 			apiKey: "AIzaSyB3z1y68w9AMPchcZVoNLfTQYqtSCMSGWM",
 			authDomain: "dosanjh-beats.firebaseapp.com",
@@ -82,13 +79,13 @@
 			measurementId: "G-4YGLS0V68T"
 		};
 		
-		// Initialize Firebase
 		const app = initializeApp(firebaseConfig);
-		window.db = getFirestore(app);
-		
+		window.db = getFirestore(app); // Attach Firestore to the global window object
+	
 	</script>
-
+	
 	<script type="module" src="/Dosanjh-Beats/db.js"></script>
+
 
 </body>
 
