--- a/index.html
+++ b/index.html
@@ -64,12 +64,12 @@
 
 	<p>Founded by MT, I created Dosanjh Beats to celebrate the universal power of music and to provide a platform where fans and artists can connect through their shared love for creativity. The platform allows users to explore, showcase, and contribute to a growing catalog of artists, albums, and tracks.</p>
 
-	<script type="module">
+	<script src="https://www.gstatic.com/firebasejs/6.0.1/firebase-app.js"></script>
+	<script src="https://www.gstatic.com/firebasejs/6.0.1/firebase-firestore.js"></script>
+	
+	<script>
 		
-		import { initializeApp } from "https://www.gstatic.com/firebasejs/6.0.1/firebase-app.js";
-		import { getFirestore } from "https://www.gstatic.com/firebasejs/6.0.1/firebase-firestore.js";
-		
-		const firebaseConfig = {
+		var config = {
 			apiKey: "AIzaSyB3z1y68w9AMPchcZVoNLfTQYqtSCMSGWM",
 			authDomain: "dosanjh-beats.firebaseapp.com",
 			projectId: "dosanjh-beats",
@@ -79,10 +79,17 @@
 			measurementId: "G-4YGLS0V68T"
 		};
 		
-		const app = initializeApp(firebaseConfig);
-		window.db = getFirestore(app); // Attach Firestore to the global window object
+		firebase.initializeApp(config);
+		const db = firebase.firestore();
 	
 	</script>
+
+	<!-- Bootstrap JS and dependencies -->
+	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+	<!-- Materialize JS -->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 	
 	<script type="module" src="/Dosanjh-Beats/db.js"></script>
 
