--- a/index.html
+++ b/index.html
@@ -83,15 +83,8 @@
 		const db = firebase.firestore();
 	
 	</script>
-
-	<!-- Bootstrap JS and dependencies -->
-	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-	<!-- Materialize JS -->
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 	
-	<script type="module" src="/Dosanjh-Beats/db.js"></script>
+	<script src="/Dosanjh-Beats/db.js"></script>
 
 
 </body>
