--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 	
 	<script>
 		
-		var config = {
+		var firebaseConfig = {
 			apiKey: "AIzaSyB3z1y68w9AMPchcZVoNLfTQYqtSCMSGWM",
 			authDomain: "dosanjh-beats.firebaseapp.com",
 			projectId: "dosanjh-beats",
@@ -79,7 +79,7 @@
 			measurementId: "G-4YGLS0V68T"
 		};
 		
-		firebase.initializeApp(config);
+		firebase.initializeApp(firebaseConfig);
 		const db = firebase.firestore();
 	
 	</script>
