--- a/Artists.html
+++ b/Artists.html
@@ -58,41 +58,8 @@
 
 	<!-- This section is for the Artists to be displayed! -->
 
-	<div class="ARTISTTEMPLETE">
+	<div class="ARTISTSECTION">
 		
-		<img scr="">
-
-		<button class="delete">🗑️</button>
-		
-		<h2>Diljit Dosanjh</h2>
-
-		<!-- This is the Artist Description! -->
-		<p>
-			Diljit Dosanjh is a renowned Indian singer, actor, and entertainer celebrated for his contributions to Punjabi music and cinema.
-			Known for his soulful voice and hit tracks like Do You Know and 5 Taara, he has also delivered iconic performances in films like 
-			the Jatt and Juliet series and Honsla Rakh. With his unique blend of traditional Punjabi roots and contemporary style, Diljit has 
-			become a global icon, bridging cultures through his music and acting.
-		</p>
-
-		<!-- This is the top 5 artist albums and tracks! -->
-		<div class="TOPALBUMS">
-			<h3>Top 5 Albums</h3>
-			<p>G.O.A.T</p>
-			<p>Moonchild Era</p>
-			<p>Ghost</p>
-			<p>Drive Thru</p>
-			<p>Roar</p>
-		</div>
-
-		<div class="TOPTRACKS">
-			<h3>Top 5 Tracks</h3>
-			<p>G.O.A.T</p>
-			<p>Born To Shine</p>
-			<p>Clash</p>
-			<p>5 Taara</p>
-			<p>Kharku</p>
-		</div>
-	
 	</div>
 
 </body>
