--- a/Albums.html
+++ b/Albums.html
@@ -55,33 +55,36 @@
 	    <button><a href="Add Your Own.html">Add Your Own</a></button>
 
     </div>
+	
+	<!-- This section is for the description of the artists music and albums to be displayed! -->
+	
+	<div class="ALBUMTEMPLETE">
+		
+		<img scr="">
+		
+		<button class="delete">🗑️</button>
+		
+		<h2>Diljit Dosanjh</h2>
+		
+		<!-- This is the Artist's music Description! -->
+		
+		<p></p>
+		
+		<!-- This is the artist's top 15 albums! -->
+		
+		<div class="ALBUMS">
+			<h3>Top 10 Albums</h3>
+			<p>G.O.A.T</p>
+			<p>Moonchild Era</p>
+			<p>Ghost</p>
+			<p>Drive Thru</p>
+			<p>Roar</p>
+		</div>
+	
+	</div>
 
-    <!-- This section is for the description of the artists music and albums to be displayed! -->
-
-    <div class="ALBUMTEMPLETE">
-
-        <img scr="">
-
-        <button class="delete">🗑️</button>
-
-        <h2>Diljit Dosanjh</h2>
-
-        <!-- This is the Artist's music Description! -->
-        <p>
-            
-        </p>
-
-        <!-- This is the artist's top 15 albums! -->
-        <div class="ALBUMS">
-            <h3>Top 10 Albums</h3>
-            <p>G.O.A.T</p>
-            <p>Moonchild Era</p>
-            <p>Ghost</p>
-            <p>Drive Thru</p>
-            <p>Roar</p>
-        </div>
-
-    </div>
+	<script src="/Dosanjh-Beats/db.js"></script>
+	<script src="/Dosanjh-Beats/ui.js"></script>
 
 </body>
 
