--- a/Artists.html
+++ b/Artists.html
@@ -59,7 +59,7 @@
 	<!-- This section is for the Artists to be displayed! -->
 
 	<div class="ARTISTSECTION">
-		
+		<h1 style="font-size: 28px;">Artists</h1>
 	</div>
 
 	<script src="/Dosanjh-Beats/db.js"></script>
