--- a/Artists.html
+++ b/Artists.html
@@ -62,6 +62,10 @@
 		<h1 style="text-align: center; color: rgb(255, 77, 77); margin: 20px 0 10px;">Artists</h1>
 	</div>
 
+	<script>
+		const db = firebase.firestore();
+	</script>
+
 	<script src="/Dosanjh-Beats/db.js"></script>
 	<script src="/Dosanjh-Beats/ui.js"></script>
 
