--- a/Albums.html
+++ b/Albums.html
@@ -58,29 +58,8 @@
 	
 	<!-- This section is for the description of the artists music and albums to be displayed! -->
 	
-	<div class="ALBUMTEMPLETE">
+	<div class="ALBUMSSECTION">
 		
-		<img scr="">
-		
-		<button class="delete">🗑️</button>
-		
-		<h2>Diljit Dosanjh</h2>
-		
-		<!-- This is the Artist's music Description! -->
-		
-		<p></p>
-		
-		<!-- This is the artist's 10 albums! -->
-		
-		<div class="ALBUMS">
-			<h3>Top 10 Albums</h3>
-			<p>G.O.A.T</p>
-			<p>Moonchild Era</p>
-			<p>Ghost</p>
-			<p>Drive Thru</p>
-			<p>Roar</p>
-		</div>
-	
 	</div>
 
 	<script src="https://www.gstatic.com/firebasejs/6.0.1/firebase-app.js"></script>
