--- a/Albums.html
+++ b/Albums.html
@@ -59,7 +59,7 @@
 	<!-- This section is for the description of the artists music and albums to be displayed! -->
 	
 	<div class="ALBUMSSECTION">
-		
+		<h1 style="text-align: center; color: rgb(255, 77, 77); margin: 20px 0 10px;">Albums</h1>
 	</div>
 
 	<script src="https://www.gstatic.com/firebasejs/6.0.1/firebase-app.js"></script>
