--- a/Tracks.html
+++ b/Tracks.html
@@ -58,28 +58,29 @@
 
 	<!-- This section is for the description of the artists music and albums to be displayed! -->
 	
-	<div class="TRACKSTEMPLETE">
-		
-		<img scr="">
-		
-		<button class="delete">🗑️</button>
-		
-		<h2>Diljit Dosanjh</h2>
-		
-		<!-- This is the artist's top 10 tracks! -->
-		
-		<div class="TRACKS">
-			
-			<h3>Top 10 Tracks</h3>
-			<p>G.O.A.T</p>
-			<p>Born To Shine</p>
-			<p>Clash</p>
-			<p>5 Taara</p>
-			<p>Kharku</p>
-
-		</div>
-	
+	<div class="TRACKSSECTION">
+		<h1 style="text-align: center; color: rgb(255, 77, 77); margin: 20px 0 10px;">Tracks</h1>
 	</div>
+
+	<script src="https://www.gstatic.com/firebasejs/6.0.1/firebase-app.js"></script>
+	<script src="https://www.gstatic.com/firebasejs/6.0.1/firebase-firestore.js"></script>
+	
+	<script>
+		
+		var firebaseConfig = {
+			apiKey: "AIzaSyB3z1y68w9AMPchcZVoNLfTQYqtSCMSGWM",
+			authDomain: "dosanjh-beats.firebaseapp.com",
+			projectId: "dosanjh-beats",
+			storageBucket: "dosanjh-beats.firebasestorage.app",
+			messagingSenderId: "393146699648",
+			appId: "1:393146699648:web:a26ec1a0e6f7082838fb65",
+			measurementId: "G-4YGLS0V68T"
+		};
+		
+		firebase.initializeApp(firebaseConfig);
+		const db = firebase.firestore();
+	
+	</script>
 
 	<script src="/Dosanjh-Beats/db.js"></script>
 	<script src="/Dosanjh-Beats/ui.js"></script>
