Update Add Your Own.html

--- a/Add Your Own.html
+++ b/Add Your Own.html
@@ -56,7 +56,54 @@
 
 	</div>
 
-	<div class="ARTISTSADDTEMPELETE">
+	<div class="ADDARTIST">
+
+		<form class="ADDARTISTFORM">
+
+			<label for="Name">Name:</label>
+			<input type="text" id="Name" name="Name" placeholder="Enter artist name"><br><br>
+			
+			<!-- Input for description -->
+			<label for="Description">Description:</label>
+			<input type="text" id="ArtistDescription" name="ArtistDescription" placeholder="Enter artist discription"><br><br>
+			
+			<!-- Inputs for albums -->
+			<h2>Top 5 Albums</h2>
+			<label for="album1">Album 1:</label>
+			<input type="text" id="album1" name="album1" placeholder="Enter album name"><br><br>
+			
+			<label for="album2">Album 2:</label>
+			<input type="text" id="album2" name="album2" placeholder="Enter album name"><br><br>
+			
+			<label for="album3">Album 3:</label>
+			<input type="text" id="album3" name="album3" placeholder="Enter album name"><br><br>
+			
+			<label for="album4">Album 4:</label>
+			<input type="text" id="album4" name="album4" placeholder="Enter album name"><br><br>
+			
+			<label for="album5">Album 5:</label>
+			<input type="text" id="album5" name="album5" placeholder="Enter album name"><br><br>
+			
+			<!-- Inputs for tracks -->
+			<h2>Top 5 Tracks</h2>
+			<label for="track1">Track 1:</label>
+			<input type="text" id="track1" name="track1" placeholder="Enter track name"><br><br>
+			
+			<label for="track2">Track 2:</label>
+			<input type="text" id="track2" name="track2" placeholder="Enter track name"><br><br>
+			
+			<label for="track3">Track 3:</label>
+			<input type="text" id="track3" name="track3" placeholder="Enter track name"><br><br>
+			
+			<label for="track4">Track 4:</label>
+			<input type="text" id="track4" name="track4" placeholder="Enter track name"><br><br>
+			
+			<label for="track5">Track 5:</label>
+			<input type="text" id="track5" name="track5" placeholder="Enter track name"><br><br>
+			
+			<!-- Submit button -->
+			<button type="submit">Submit</button>
+		</form>
 		
 	</div>
 	
