Update Add Your Own.html

--- a/Add Your Own.html
+++ b/Add Your Own.html
@@ -58,6 +58,10 @@
 
 	<div class="ADDARTIST">
 
+		<h1 style="text-align: center; color: rgb(255, 77, 77); margin: 20px 0 10px;">Add Your Own</h1>
+
+		<h3 style="text-align: center; color: rgb(255, 77, 77); margin: 20px 0 10px;">Artists</h3>
+
 		<form class="ADDARTISTFORM">
 
 			<label for="Name">Name:</label>
