Update Add Your Own.html

--- a/Add Your Own.html
+++ b/Add Your Own.html
@@ -55,10 +55,10 @@
 		<button><a href="Tracks.html">Tracks</a></button>
 
 	</div>
+	
+	<h1 style="text-align: center; color: rgb(255, 77, 77); margin: 20px 0 10px;">Add Your Own</h1>
 
 	<div class="ADDARTIST">
-
-		<h1 style="text-align: center; color: rgb(255, 77, 77); margin: 20px 0 10px;">Add Your Own</h1>
 
 		<h3 style="text-align: center; color: rgb(255, 77, 77); margin: 20px 0 10px;">Artists</h3>
 
@@ -74,36 +74,36 @@
 			<!-- Inputs for albums -->
 			<h2>Top 5 Albums</h2>
 			<label for="album1">Album 1:</label>
-			<input type="text" id="album1" name="album1" placeholder="Enter album name"><br><br>
+			<input type="text" id="ALBUM1" name="ALBUM1" placeholder="Enter album name"><br><br>
 			
 			<label for="album2">Album 2:</label>
-			<input type="text" id="album2" name="album2" placeholder="Enter album name"><br><br>
+			<input type="text" id="ALBUM2" name="ALBUM2" placeholder="Enter album name"><br><br>
 			
 			<label for="album3">Album 3:</label>
-			<input type="text" id="album3" name="album3" placeholder="Enter album name"><br><br>
+			<input type="text" id="ALBUM3" name="ALBUM3" placeholder="Enter album name"><br><br>
 			
 			<label for="album4">Album 4:</label>
-			<input type="text" id="album4" name="album4" placeholder="Enter album name"><br><br>
+			<input type="text" id="ALBUM4" name="ALBUM4" placeholder="Enter album name"><br><br>
 			
 			<label for="album5">Album 5:</label>
-			<input type="text" id="album5" name="album5" placeholder="Enter album name"><br><br>
+			<input type="text" id="ALBUM5" name="ALBUM5" placeholder="Enter album name"><br><br>
 			
 			<!-- Inputs for tracks -->
 			<h2>Top 5 Tracks</h2>
 			<label for="track1">Track 1:</label>
-			<input type="text" id="track1" name="track1" placeholder="Enter track name"><br><br>
+			<input type="text" id="TRACK1" name="TRACK1" placeholder="Enter track name"><br><br>
 			
 			<label for="track2">Track 2:</label>
-			<input type="text" id="track2" name="track2" placeholder="Enter track name"><br><br>
+			<input type="text" id="TRACK2" name="TRACK2" placeholder="Enter track name"><br><br>
 			
 			<label for="track3">Track 3:</label>
-			<input type="text" id="track3" name="track3" placeholder="Enter track name"><br><br>
+			<input type="text" id="TRACK3" name="TRACK3" placeholder="Enter track name"><br><br>
 			
 			<label for="track4">Track 4:</label>
-			<input type="text" id="track4" name="track4" placeholder="Enter track name"><br><br>
+			<input type="text" id="TRACK4" name="TRACK4" placeholder="Enter track name"><br><br>
 			
 			<label for="track5">Track 5:</label>
-			<input type="text" id="track5" name="track5" placeholder="Enter track name"><br><br>
+			<input type="text" id="TRACK5" name="TRACK5" placeholder="Enter track name"><br><br>
 			
 			<!-- Submit button -->
 			<button type="submit">Submit</button>
@@ -112,10 +112,14 @@
 	</div>
 	
 	<div class="ALBUMSSADDTEMPELETE">
+
+		<h3 style="text-align: center; color: rgb(255, 77, 77); margin: 20px 0 10px;">Albums</h3>
 		
 	</div>
 	
 	<div class="TRACKSADDTEMPELETE">
+
+		<h3 style="text-align: center; color: rgb(255, 77, 77); margin: 20px 0 10px;">Tracks</h3>
 		
 	</div>
 
